--- a/package.json
+++ b/package.json
@@ -1,36 +1,33 @@
 {
-	"name": "charSheet",
-	"version": "0.0.1",
-	"description": "Modular Character Sheet for Pathfinder",
-	"dependencies": 
-	{
-
-	},
-	"devDependencies": 
-	{
-		"babel-core": "^6.1.2",
-	    "babel-loader": "^6.1.0",
-	    "babel-plugin-transform-runtime": "^6.1.2",
-	    "babel-preset-es2015": "^6.1.2",
-	    "babel-preset-stage-0": "^6.1.2",
-	    "babel-runtime": "^5.8.0",
-	    "css-loader": "^0.25.0",
-	    "style-loader": "^0.13.0",
-	    "webpack": "^1.12.2",
-		"vue-loader": "^9.4.0",
-    	"vue-html-loader": "^1.0.0",
-    	"vue-style-loader": "^1.0.0",
-    	"body-parser": "^1.6.5",
-	    "compression": "^1.0.11",
-	    "cors": "^2.4.1",
-	    "dotenv": "^0.4.0",
-	    "errorhandler": "^1.1.1",
-	    "express": "^4.8.5",
-	    "express-jwt": "^0.3.1",
-	    "jsonwebtoken": "^5.0.1",
-	    "lodash": "^2.4.1",
-	    "morgan": "^1.2.3"
-
-	},
-	"author": "You"
+  "name": "charSheet",
+  "version": "0.0.1",
+  "description": "Modular Character Sheet for Pathfinder",
+  "dependencies": {
+    "mongodb": "^2.2.11"
+  },
+  "devDependencies": {
+    "babel-core": "^6.1.2",
+    "babel-loader": "^6.1.0",
+    "babel-plugin-transform-runtime": "^6.1.2",
+    "babel-preset-es2015": "^6.1.2",
+    "babel-preset-stage-0": "^6.1.2",
+    "babel-runtime": "^5.8.0",
+    "css-loader": "^0.25.0",
+    "style-loader": "^0.13.0",
+    "webpack": "^1.12.2",
+    "vue-loader": "^9.4.0",
+    "vue-html-loader": "^1.0.0",
+    "vue-style-loader": "^1.0.0",
+    "body-parser": "^1.6.5",
+    "compression": "^1.0.11",
+    "cors": "^2.4.1",
+    "dotenv": "^0.4.0",
+    "errorhandler": "^1.1.1",
+    "express": "^4.8.5",
+    "express-jwt": "^0.3.1",
+    "jsonwebtoken": "^5.0.1",
+    "lodash": "^2.4.1",
+    "morgan": "^1.2.3"
+  },
+  "author": "You"
 }
